--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Archivo:ital,wght@0,100..900;1,100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .font-outline-2 {
+        -webkit-text-stroke: 2px black;
+    }
+    .font-outline-4 {
+        -webkit-text-stroke: 4px black;
+    }
+    .font-outline-none {
+        -webkit-text-stroke: 0px black;
+    }
+    .font-outline-1 {
+        -webkit-text-stroke: 1px black;
+    }
+    .border-b-1 {
+        border-bottom: 1px solid #000;
+        border-bottom: 1px solid #000;
+        -webkit-transform: translateY(0.5px);
+        transform: translateY(0.5px);
+    }
+}
